Fix no-bg icons inside popovers staying visible after the popover has closed

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -673,7 +673,6 @@ input[type='submit'] {
         background: none;
         border-color: transparent;
         color: $fontButtonInvisible;
-        visibility: visible;
         i {
             color: $iconButtonInvisible;
         }
